delete method unit test