@@ -4,24 +4,21 @@ import com.rebecamontag.projectuniversity.model.entity.Professor;
 import com.rebecamontag.projectuniversity.model.enumeration.Gender;
 
 import java.time.LocalDate;
-import java.util.Collections;
-
-import static org.mockito.ArgumentMatchers.any;
+import java.util.List;
 
 public class ProfessorStubs {
 
     public static Professor createProfessor() {
-        Professor professor = Professor.builder()
-                .id(001)
+
+        return Professor.builder()
+                .id(1)
                 .firstName("Rebeca")
                 .lastName("M. Pusinhol")
                 .birthDate(LocalDate.now())
                 .document("12345678900")
                 .email("teste@gmail.com")
                 .gender(Gender.FEMALE)
-                .courses(Collections.singletonList(any()))
+                .courses(List.of())
                 .build();
-
-        return professor;
     }
 }
